src/objects/Recruiting_Candidate__c.object
<CustomObject>
    <fields>
        <fullName>Anticipated_Start__c</fullName>
        <label>Anticipated Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spring 2015</fullName>
                </value>
                <value>
                    <fullName>Summer 2015</fullName>
                </value>
                <value>
                    <fullName>Fall 2015</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit_Manual_Override__c</fullName>
        <label>Business Unit (Manual Override)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_With_Sales_Detail__c</fullName>
        <formula>IF(ISBLANK(Business_Unit_Manual_Override__c),TEXT(Recruiting_Spec__r.Business_Unit__c),Business_Unit_Manual_Override__c)</formula>
        <label>Business Unit (With Sales Detail)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting/Finance</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>General &amp; Administrative</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidate_Highest_Status_Recruiter__c</fullName>
        <formula>First_Name__c&amp;&quot; &quot;&amp;Last_NameOLD__c&amp;&quot; (&quot;&amp;RIGHT(Highest_Status_Reached__c,LEN(Highest_Status_Reached__c)-4)&amp;&quot;, &quot;&amp;TEXT(Recruiter__c)&amp;&quot;)&quot;</formula>
        <label>Candidate (Highest Status, Recruiter)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Source__c</fullName>
        <label>Candidate Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RFL: Internal Referral</fullName>
                </value>
                <value>
                    <fullName>RFL: Internal Referral SPIFF</fullName>
                </value>
                <value>
                    <fullName>RFL: External Referral</fullName>
                </value>
                <value>
                    <fullName>RFL: College Ambassador</fullName>
                </value>
                <value>
                    <fullName>INB: VMT Career Site</fullName>
                </value>
                <value>
                    <fullName>INB: Social Media</fullName>
                </value>
                <value>
                    <fullName>SRC: LinkedIn (Sourced)</fullName>
                </value>
                <value>
                    <fullName>SRC: Cold Outreach</fullName>
                </value>
                <value>
                    <fullName>JBD: Indeed.com</fullName>
                </value>
                <value>
                    <fullName>JBD: Monster.com</fullName>
                </value>
                <value>
                    <fullName>JBD: LinkedIn Job Post</fullName>
                </value>
                <value>
                    <fullName>JBD: Glassdoor</fullName>
                </value>
                <value>
                    <fullName>JBD: VentureFizz</fullName>
                </value>
                <value>
                    <fullName>JBD: Craigslist</fullName>
                </value>
                <value>
                    <fullName>JBD: Reed.co.uk</fullName>
                </value>
                <value>
                    <fullName>JBD: Milkround</fullName>
                </value>
                <value>
                    <fullName>EVT: Recruiting Event</fullName>
                </value>
                <value>
                    <fullName>EVT: Career Fair</fullName>
                </value>
                <value>
                    <fullName>CLG: College Recruiting</fullName>
                </value>
                <value>
                    <fullName>HDH: Headhunter</fullName>
                </value>
                <value>
                    <fullName>HDH: Launchsource</fullName>
                </value>
                <value>
                    <fullName>INT: Internal Move</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_Date_Adj__c</fullName>
        <formula>IF(ISBLANK(Created_Date_Manual__c),DATEVALUE(CreatedDate),Created_Date_Manual__c)</formula>
        <label>Created Date (Adj)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Date_Manual__c</fullName>
        <label>Created Date (Manual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Period_for_TVs__c</fullName>
        <formula>IF(Created_Date_Adj__c =TODAY(),1, 
IF(Created_Date_Adj__c &gt;=TODAY()-MOD(TODAY()-DATE(1900, 1, 7), 7),2, 
IF(Created_Date_Adj__c &gt;=DATE(YEAR(TODAY()),MONTH(TODAY()),1),3, 
4)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Period for TVs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_Quarter__c</fullName>
        <formula>IF( AND( Created_Date_Adj__c &gt;= DATE(2014,1,1), Created_Date_Adj__c &lt; DATE(2014,4,1)),&quot;FY14Q1&quot;,
IF( AND( Created_Date_Adj__c &gt;= DATE(2014,4,1), Created_Date_Adj__c &lt; DATE(2014,7,1)),&quot;FY14Q2&quot;,
IF( AND( Created_Date_Adj__c &gt;= DATE(2014,7,1), Created_Date_Adj__c &lt; DATE(2014,10,1)),&quot;FY14Q3&quot;,
IF( AND( Created_Date_Adj__c &gt;= DATE(2014,10,1), Created_Date_Adj__c &lt; DATE(2015,1,1)),&quot;FY14Q4&quot;,
IF( AND( Created_Date_Adj__c &gt;= DATE(2015,1,1), Created_Date_Adj__c &lt; DATE(2015,4,1)),&quot;FY15Q1&quot;,
IF( AND( Created_Date_Adj__c &gt;= DATE(2015,4,1), Created_Date_Adj__c &lt; DATE(2015,7,1)),&quot;FY15Q2&quot;,
IF( AND( Created_Date_Adj__c &gt;= DATE(2015,7,1), Created_Date_Adj__c &lt; DATE(2015,10,1)),&quot;FY15Q3&quot;,
IF( AND( Created_Date_Adj__c &gt;= DATE(2015,10,1), Created_Date_Adj__c &lt; DATE(2016,1,1)),&quot;FY15Q4&quot;,
&quot;N/A&quot;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Date_Quarter__c</fullName>
        <formula>IF(AND(MONTH(TODAY())&gt;=1,MONTH(TODAY())&lt;4),1, 
IF(AND(MONTH(TODAY())&gt;3,MONTH(TODAY())&lt;7),2, 
IF(AND(MONTH(TODAY())&gt;6,MONTH(TODAY())&lt;10),3, 
4)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Date Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Title__c</fullName>
        <description>Current Job Title (outside VMTurbo)</description>
        <label>Current Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cycle_Time_Days__c</fullName>
        <formula>IF(NOT(ISBLANK( Start_Date__c )), Start_Date__c - Created_Date_Adj__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cycle Time (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Screen_to_Hire__c</fullName>
        <formula>IF(NOT(ISBLANK( Offer_Accepted_On__c )), Offer_Accepted_On__c - Screen_Completed_On__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Screen to Hire</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eligible_for_referral_bonus__c</fullName>
        <description>Indicates whether the employee that referred the candidate is ‘eligible for referral bonus’ per the policy ofr internally referred candidates</description>
        <label>Eligible for referral bonus</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Candidate_Source__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Experience_Level__c</fullName>
        <inlineHelpText>Entry level - BDRs, SE, entry level candidates
Mid level - Account Executive or equivalent
Manager - Bus Driver or equivalent
Director - Regional Director or equivalent
Executive - C-level or equivalent</inlineHelpText>
        <label>Experience Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entry Level</fullName>
                </value>
                <value>
                    <fullName>Mid Level</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name_Text__c</fullName>
        <formula>First_Name__c &amp; &quot; &quot; &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id,IF(ISBLANK(First_Name__c),Name,First_Name__c&amp;&quot; &quot;&amp;Name))</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Non_Compete_Non_Solicit_Agreement__c</fullName>
        <label>Has Non-Compete/Non-Solicit Agreement</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highest_Status_Reached_Ordered__c</fullName>
        <formula>CASE(Highest_Status_Reached__c,
&quot;Applicant Submitted&quot;,&quot;(a) Applicant Submitted&quot;,
&quot;Initial Outreach Completed&quot;,&quot;(b) Initial Outreach Completed&quot;,
&quot;Screen Completed&quot;,&quot;(c) Screen Completed&quot;,
&quot;Screen 1 Completed&quot;,&quot;(c1) Screen 1 Completed&quot;,
&quot;Screen 2 Completed&quot;,&quot;(c2) Screen 2 Completed&quot;,
&quot;R&amp;D Test Administered&quot;,&quot;(c3) R&amp;D Test Administered&quot;,
&quot;Onsite Interview 1 Completed&quot;,&quot;(d) Onsite Interview 1 Completed&quot;,
&quot;Onsite Interview 2 Completed&quot;,&quot;(e) Onsite Interview 2 Completed&quot;,
&quot;Offer Extended&quot;,&quot;(f) Offer Extended&quot;,
&quot;Offer Accepted&quot;,&quot;(g) Offer Accepted&quot;,
NULL)</formula>
        <label>Highest Status Reached (Ordered)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highest_Status_Reached__c</fullName>
        <label>Highest Status Reached</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hire_Period__c</fullName>
        <formula>IF( Current_Date_Quarter__c != Start_Date_Quarter__c ,5,
IF(Start_Date__c = TODAY(),1, 
IF(AND(Start_Date__c&gt;=TODAY()-MOD(TODAY()-DATE(1900, 1, 7),7),Start_Date__c&lt;=(TODAY()+7-MOD(TODAY()-DATE(1900, 1, 7),7))),2, 
IF(AND(Start_Date__c&gt;=DATE(YEAR(TODAY()),MONTH(TODAY()),1),Start_Date__c&lt;=DATE(YEAR(TODAY()),MONTH(TODAY())+1,1)),3, 
4))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hire Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Home_Address_City__c</fullName>
        <label>Home Address (City)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Address_Country__c</fullName>
        <label>Home Address (Country)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                    <default>true</default>
                    <label>United States</label>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Deps</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Address_State__c</fullName>
        <label>Home Address (State)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Address_Street__c</fullName>
        <label>Home Address (Street)</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Address_Zip__c</fullName>
        <label>Home Address (Zip)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <formula>LastModifiedBy.Full_Name__c</formula>
        <label>Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Adj__c</fullName>
        <formula>IF(ISBLANK(Manual_Last_Modified_Date__c),LastModifiedDate,Manual_Last_Modified_Date__c)</formula>
        <label>Last Modified Date (Adj)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <formula>LastModifiedDate</formula>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_NameOLD__c</fullName>
        <label>Last NameOLD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Manual_Last_Modified_Date__c</fullName>
        <label>Manual Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Manual_Report_To__c</fullName>
        <inlineHelpText>Use this if the candidate will not report to the default &quot;Report To&quot; manager for the Recruiting Spec the candidate is attached to.</inlineHelpText>
        <label>Manual Report To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Accepted_On__c</fullName>
        <label>Offer Accepted On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Accepted_on_Period__c</fullName>
        <formula>IF(    Offer_Accepted_On__c = TODAY(),1, 
IF(Offer_Accepted_On__c&gt;=TODAY()-MOD(TODAY()-DATE(1900, 1, 7), 7),2, 
IF(Offer_Accepted_On__c&gt;=DATE(YEAR(TODAY()),MONTH(TODAY()),1),3, 
4)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Accepted on Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Extended_On_Period__c</fullName>
        <formula>IF( Offer_Extended_On__c =TODAY(),1, 
IF(Offer_Extended_On__c &gt;=TODAY()-MOD(TODAY()-DATE(1900, 1, 7), 7),2, 
IF(Offer_Extended_On__c &gt;=DATE(YEAR(TODAY()),MONTH(TODAY()),1),3, 
4)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Extended On Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Extended_On__c</fullName>
        <label>Offer Extended On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OnSite_1_Period_for_TVs__c</fullName>
        <formula>IF( Onsite_Interview_Completed_On__c =TODAY(),1, 
IF(Onsite_Interview_Completed_On__c &gt;=TODAY()-MOD(TODAY()-DATE(1900, 1, 7), 7),2, 
IF(Onsite_Interview_Completed_On__c &gt;=DATE(YEAR(TODAY()),MONTH(TODAY()),1),3, 
4)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OnSite 1 Period for TVs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_Recruiting_Candidate__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One (Recruiting Candidate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onsite_2_Completed_On__c</fullName>
        <label>Onsite Interview 2 Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Onsite_2_Period_for_TVs__c</fullName>
        <formula>IF( Onsite_2_Completed_On__c =TODAY(),1, 
IF(Onsite_2_Completed_On__c &gt;=TODAY()-MOD(TODAY()-DATE(1900, 1, 7), 7),2, 
IF(Onsite_2_Completed_On__c &gt;=DATE(YEAR(TODAY()),MONTH(TODAY()),1),3, 
4)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Onsite 2 Period for TVs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onsite_Interview_Completed_On__c</fullName>
        <label>Onsite Interview 1 Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Primary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Candidate_Withdrew__c</fullName>
        <label>Reason Candidate Withdrew</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recruiter__c</fullName>
        <label>Recruiter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adam Pasti</fullName>
                    <color>#FFCC33</color>
                    <label>Adam Pasti</label>
                </value>
                <value>
                    <fullName>Andrew Lane</fullName>
                    <color>#66E9BD</color>
                    <label>Andrew Lane</label>
                </value>
                <value>
                    <fullName>Brigid Doulin</fullName>
                    <color>#FF0000</color>
                    <label>Brigid Doulin</label>
                </value>
                <value>
                    <fullName>Chris McMahon</fullName>
                </value>
                <value>
                    <fullName>Ed Morris</fullName>
                </value>
                <value>
                    <fullName>Jennifer Russell</fullName>
                </value>
                <value>
                    <fullName>Larry Jacobson</fullName>
                </value>
                <value>
                    <fullName>Lauren Cobb</fullName>
                </value>
                <value>
                    <fullName>Lila Haffey</fullName>
                    <color>#E27001</color>
                    <label>Lila Haffey</label>
                </value>
                <value>
                    <fullName>Nick Picardi</fullName>
                </value>
                <value>
                    <fullName>Stacey Schmidt</fullName>
                </value>
                <value>
                    <fullName>Zach Choquette</fullName>
                    <color>#990000</color>
                    <label>Zach Choquette</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruiting_Candidate_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Recruiting Candidate Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruiting_Organization_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recruiting Organization 2</label>
        <referenceTo>Recruiting_Organization__c</referenceTo>
        <relationshipLabel>Recruiting Candidates (Recruiting Organization 2)</relationshipLabel>
        <relationshipName>Recruiting_Candidates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recruiting_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recruiting Organization 1</label>
        <referenceTo>Recruiting_Organization__c</referenceTo>
        <relationshipLabel>Recruiting Candidates</relationshipLabel>
        <relationshipName>Recruiting_Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recruiting_Spec__c</fullName>
        <label>Recruiting Spec</label>
        <referenceTo>Recruiting_Spec__c</referenceTo>
        <relationshipLabel>Recruiting Candidates</relationshipLabel>
        <relationshipName>Recruiting_Candidates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Report_To__c</fullName>
        <formula>IF(ISBLANK(Recruiting_Spec__r.Report_To__c),Manual_Report_To__c,Recruiting_Spec__r.Report_To__c)</formula>
        <label>Report To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resume_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resume Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Interviewed_ForOLD__c</fullName>
        <label>Role Interviewed ForOLD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Interviewed_For_NEW__c</fullName>
        <formula>IF(CONTAINS(Recruiting_Spec__r.Name,&quot; - &quot;),Substitute(Recruiting_Spec__r.Name,RIGHT(Recruiting_Spec__r.Name,11),&quot;&quot;),Recruiting_Spec__r.Name)</formula>
        <label>Role Interviewed For</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Interviewed_For__c</fullName>
        <label>Role Interviewed For OLD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BDR US</fullName>
                </value>
                <value>
                    <fullName>BDR EMEA</fullName>
                </value>
                <value>
                    <fullName>Inside Account Executive US</fullName>
                </value>
                <value>
                    <fullName>Inside Account Executive EMEA</fullName>
                </value>
                <value>
                    <fullName>Partner Manager</fullName>
                </value>
                <value>
                    <fullName>Channel Manager EMEA</fullName>
                </value>
                <value>
                    <fullName>Sales Engineer US</fullName>
                </value>
                <value>
                    <fullName>Sales Engineer EMEA</fullName>
                </value>
                <value>
                    <fullName>Global Account Director EMEA</fullName>
                </value>
                <value>
                    <fullName>VP Strategic Alliances</fullName>
                </value>
                <value>
                    <fullName>Office Manager</fullName>
                </value>
                <value>
                    <fullName>Customer Education Specialist</fullName>
                </value>
                <value>
                    <fullName>Software Engineer</fullName>
                </value>
                <value>
                    <fullName>Software Test Engineer</fullName>
                </value>
                <value>
                    <fullName>UI Engineer</fullName>
                </value>
                <value>
                    <fullName>Web Developer</fullName>
                </value>
                <value>
                    <fullName>Recruiting Associate</fullName>
                </value>
                <value>
                    <fullName>Strategy &amp; Operations Analyst</fullName>
                </value>
                <value>
                    <fullName>Assistant Controller</fullName>
                </value>
                <value>
                    <fullName>Technical Recruiter</fullName>
                </value>
                <value>
                    <fullName>Software Development Engineer in Test</fullName>
                </value>
                <value>
                    <fullName>Enterprise Account Executive EMEA</fullName>
                </value>
                <value>
                    <fullName>Enterprise Account Executive US</fullName>
                </value>
                <value>
                    <fullName>Search Marketing Analyst</fullName>
                </value>
                <value>
                    <fullName>Global Account Executive US</fullName>
                </value>
                <value>
                    <fullName>Product Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>EMEA Recruiter</fullName>
                </value>
                <value>
                    <fullName>Recruiter EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>IF(TEXT(Role_Interviewed_For__c)=&quot;Other&quot;,Specify_Role_if_Other__c,TEXT(Role_Interviewed_For__c))</formula>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Screen_2_Completed_On__c</fullName>
        <label>Screen 2 Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Screen_Completed_On__c</fullName>
        <label>Screen 1 Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Screen_Completed_Period__c</fullName>
        <formula>IF( Screen_Completed_On__c =TODAY(),1, 
IF(Screen_Completed_On__c &gt;=TODAY()-MOD(TODAY()-DATE(1900, 1, 7), 7),2, 
IF(Screen_Completed_On__c &gt;=DATE(YEAR(TODAY()),MONTH(TODAY()),1),3, 
4)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Screen Completed Period</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_Recruiter__c</fullName>
        <label>Secondary Recruiter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rachel Murray</fullName>
                </value>
                <value>
                    <fullName>Michelle Tuzio</fullName>
                </value>
                <value>
                    <fullName>Lila Haffey</fullName>
                </value>
                <value>
                    <fullName>Veronica Curran</fullName>
                </value>
                <value>
                    <fullName>Andrew Lane</fullName>
                </value>
                <value>
                    <fullName>Brigid Doulin</fullName>
                </value>
                <value>
                    <fullName>Zach Choquette</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>